Supress java warning and bump version